fix: lock page overflow

--- a/src/ui/views/Unlock/style.less
+++ b/src/ui/views/Unlock/style.less
@@ -1,12 +1,12 @@
 .unlock {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   overflow: hidden;
   .header {
     height: 400px;
     width: 100%;
-    background: linear-gradient(101.58deg, #8BB2FF 1.04%, #7A7CFF 90.78%);
+    background: linear-gradient(101.58deg, #8bb2ff 1.04%, #7a7cff 90.78%);
     background-size: 100%;
     position: relative;
     .image {
